# embenet-demo-rc-cc1312r-868

./: .ccsproject  .cproject  .project  README.md  custom_service.c  embenet_node.syscfg  main.c  mqttsn_client_service.c
embenet_node_port/: CMakeLists.txt  embenet_node_port_cc1312-config.cmake
embenet_node_port/cmake/: cc1312_toolchain.cmake  simplelink_sdk_utils.cmake
embenet_node_port/src/: CMakeLists.txt  embenet_aes128.c  embenet_brt.c  embenet_capabilities.c  embenet_critical_section.c  embenet_eui64.c  embenet_node_port.syscfg  embenet_radio.c  embenet_random.c  embenet_timer.c
targetConfigs/: CC1312R1F3.ccxml
